--- a/dns/Cargo.toml
+++ b/dns/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 log ={ path = "../log"}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+scoped_threadpool = "0.1.9"
+crossbeam = "0.8.0"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
